building task_details and 3d view;

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,3 +2,19 @@ div#tasks {
     height: 300px;
     overflow-y: scroll;
 }
+
+.loader {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #8cb1ca; /* Blue */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
