--- a/static/css/app.css
+++ b/static/css/app.css
@@ -3,12 +3,20 @@ div#tasks {
     overflow-y: scroll;
 }
 
+.callout.rounded {
+  border-radius: 20px;
+}
+
+.tabs-title {
+  font-size: 1.25rem;
+}
+
 .loader {
   border: 5px solid #f3f3f3; /* Light grey */
   border-top: 5px solid #8cb1ca; /* Blue */
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   animation: spin 2s linear infinite;
   margin-left: 10px;
   margin-right: 10px;
